--- a/HTMLcours1/asset/css/style.css
+++ b/HTMLcours1/asset/css/style.css
@@ -5,12 +5,12 @@ section {
     height: 10rem;  /* 1em = 16px mais peux 0.5em. Alors qu'avec le rem = valeur absolu  donc 1rem = 16px*/
 }
 
-section > * {
-    display: block; /*inline, inline-block, block00 */
+/*section > * {
+    display: block; (inline, inline-block, block00) 
     height: 2rem;
     width: 40%;
     background-color: rgba(255, 8, 0, 0.774); 
-}
+} */
 
 p {
     height: 250px;
