--- a/HTMLexos/assets/style.css
+++ b/HTMLexos/assets/style.css
@@ -5,10 +5,12 @@
     height: 500px;
     width: 500px;
     object-fit: cover;
-    margin-top: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 40px;
 }
 
-h1, h2, h3, ul, a {
+h1, h2, h3, ul{
     color: white;
 }
 
@@ -68,8 +70,6 @@ button {
     color: white;
     background-color: rgb(170, 1, 1);
     border-radius: 10px;
-    
-    
 }
 
 button:hover {
@@ -78,3 +78,32 @@ button:hover {
 }
 
 
+.flexboxContainer {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.flexbox {
+    width: 40%;
+}
+
+.flexboxContainerNav {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgb(184, 180, 180);
+    height: 40px;
+    margin: 1rem 10% 2rem 10%;
+    padding: 5px 20px;
+    border-radius: 40px;
+    border: 5px black solid;
+}
+
+.flexboxNav, a {
+    font-family: 'Roboto Condensed', sans-serif;
+    color: black;
+    font-size: 30px;
+}
