--- a/HTMLexos/assets/style.css
+++ b/HTMLexos/assets/style.css
@@ -48,6 +48,8 @@ p {
     padding: 20px;
     border-radius: 40px;
     border: 2px dashed black;
+    width: 500px;
+    
 }
 
 body {
@@ -81,15 +83,21 @@ button:hover {
 }
 
 
-.flexboxContainer {
-    display: flex;
-    flex-flow: row nowrap;
+.gridContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
     justify-content: center;
-    align-items: center;
+    text-align: center;
+    gap: 50px;
 }
 
-.flexbox {
-    width: 40%;
+.grid1 {
+    justify-self: end;
+}
+.grid {
+    display: flex;
+    align-items: center;
 }
 
 .flexboxContainerNav {
@@ -122,13 +130,14 @@ button:hover {
 }
 
 table {
-    /*background-color: gray;
-    padding: 50px;*/
+    /*background-color: gray;*/
+    padding: 50px;
     margin: 30px;
-    color: white;
+    color: rgb(0, 0, 0);
     border: 5px dashed rgb(255, 255, 255);
     /*border-radius: 20px;*/
     border-collapse: collapse;
+    background-color: rgb(184, 180, 180);
     
 }
 
@@ -142,6 +151,5 @@ th, td {
     display: flex;
     justify-content: center;
     font-size: 30px;
-    
 }
 
