fin de l'exercice Spring

--- a/Spring/Exercice2/src/main/resources/templates/home.html
+++ b/Spring/Exercice2/src/main/resources/templates/home.html
@@ -13,13 +13,13 @@
     <header>
         <nav class="navBar">
             <ul>
-                <li><a th:href="@{/}">Page d'acceuil</a></li>
+                <li><a th:href="@{/}">Page d'accueil</a></li>
                 <li><a th:href="@{/contacts}">Page de contact</a></li>
             </ul>
         </nav>
     </header>
     <main th:class="container">
-        <h1>Page d'acceuil</h1>
+        <h1>Page d'accueil</h1>
     </main>
 
 </body>
