--- a/Spring/Exercice2/src/main/resources/templates/contact/contactList.html
+++ b/Spring/Exercice2/src/main/resources/templates/contact/contactList.html
@@ -28,7 +28,10 @@
                     <td th:text="${c.lastName}"></td>
                     <td th:text="${c.age}"></td>
                     <td th:text="${c.phoneNumber}"></td>
-                    <td><a th:href="@{/contacts/{contactId}(contactId=${c.id})}" class="btn btn-outline-info"><i class="bi bi-eye"></i> Details</a></td>
+                    <td><a th:href="@{/contacts/{contactId}(contactId=${c.id})}" class="btn btn-outline-info"><i class="bi bi-eye"></i> Details</a>
+                        <a href="" class="btn btn-outline-warning"><i class="bi bi-pencil-square"></i> Edit</a>
+                        <a th:href="@{/contacts/{contactId}(contactId=${c.id})}" class="btn btn-outline-danger"><i class="bi bi-trash"></i> Delete</a>
+                    </td>
                 </tr>
             </tbody>
         </table>
