--- a/Spring/ExercicePokeAPI/src/main/resources/templates/pokemon/details.html
+++ b/Spring/ExercicePokeAPI/src/main/resources/templates/pokemon/details.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Pokemon Details</title>
+    <th:block th:fragment="bootstrapImports">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </th:block>
 </head>
 <body>
+<main class="container ">
+    <h1 class="text-center fw-light display-4">Who's that Pokémone ?</h1>
+    <hr>
+    <div>
+        <form class="d-flex form-control-lg input-group" role="search">
+            <input class="form-control " type="search" placeholder="Rechercher par Nom ou Id" aria-label="Search">
+            <a th:href="/pokemon/{idOrName}" class="btn btn-warning">Search</a>
+        </form>
+    </div>
+    <br>
+    <div class="col-8 offset-2 text-bg-dark p-3 rounded" >
+        <h2 class="text-center tw-light display-8" th:field="*{name}"></h2>
+        <div class="row-2">
 
+        </div>
+    </div>
+
+</main>
 </body>
 </html>
