--- a/Spring/ExercicePokeAPI/src/main/resources/templates/pokemon/details.html
+++ b/Spring/ExercicePokeAPI/src/main/resources/templates/pokemon/details.html
@@ -36,13 +36,22 @@
             </thead>
             <tbody>
                 <tr>
+                    <td th:text="*{pokemon.id}"></td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+<!--                    <td th:each="${pokemon.types}"> <span th:text="${#strings.capitalize(pokemon.types)}"></span></td>-->
+                    <td th:text="*{pokemon.height}"></td>
+                    <td th:text="*{pokemon.weight}"></td>
                 </tr>
             </tbody>
         </table>
+        <h3 class="text-center tw-light display-12"> Capacity </h3>
+        <div class="row g-3">
+            <div class="col-6 text-bg-dark rounded text-center">
+                <span th:if="${pokemon.abilities[0].slot == 1}" th:text="*{#strings.capitalize(abilities[0].ability.name)}"></span>
+
+            </div>
+
+        </div>
     </div>
 
 </main>
