--- a/Spring/Demo_Spring_Security_Session/src/main/resources/templates/loginForm.html
+++ b/Spring/Demo_Spring_Security_Session/src/main/resources/templates/loginForm.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Home Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </head>
 <body>
-$END$
+<main class="container">
+    <h1>Home Page</h1>
+    <form th:action="@{/login}" method="post" class="mb-3 form-floating text-dark">
+        <input type="text" class="form-control" name="pseudo" id="pseudo" placeholder="" required>
+        <label for="pseudo">Pseudo</label>
+    </form>
+    <form th:action="@{/login}" method="post" class="mb-3 form-floating text-dark">
+        <input type="password" class="form-control" name="password" id="password" placeholder="" required>
+        <label for="password">Mot de passe</label>
+    </form>
+    <button>submit</button>
+
+</main>
 </body>
 </html>
